# routes/api.php
@@ -7,19 +7,19 @@ Route::group(['namespace' => 'Api'] ,function (){
         Route::post('refresh', 'AuthController@refresh');
         Route::post('reset-password', 'AuthController@resetPassword');
     });
-    Route::group(['middleware'=>['auth:api']],function (){
-        Route::group(['prefix' => 'account/users'], function () {
+
+        Route::group(['prefix' => 'account/{guard}'], function () {
             Route::get('/me','ProfileController@me');
-            Route::get('/account-product','ProfileController@accountProduct');
+            Route::get('/my-product','ProfileController@accountProduct');
             Route::get('/my-products','ProfileController@companyProducts');
             Route::post('/update','ProfileController@update')->name('api.account.update');
             Route::post('/update-password','ProfileController@updatePassword');
+            Route::get('/my-patients-cards','ProfileController@myPatientsCards');
         });
-
+    Route::group(['middleware'=>['auth:api']],function (){
         Route::get('/my-patients','PatientController@index');
         Route::get('/patients/{patient}','PatientController@show');
         Route::get('/patients/{patient}/orders','PatientController@patientOrders');
-        Route::get('/my-patients-cards','PatientController@myPatientsCards');
 
         Route::get('/companies','CompanyController@index');
         Route::get('/companies/{company}','CompanyController@show');
@@ -28,6 +28,5 @@ Route::group(['namespace' => 'Api'] ,function (){
         Route::get('/products','ProductController@index');
         Route::get('/products/{product}','ProductController@show');
         Route::get('/products/{product}/patients','ProductController@productPatients');
-
     });
 });
